List view: Fix text wrapping on table header

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -125,6 +125,7 @@ table thead th {
   -o-text-shadow: 0px 1px 1px #FFFFFF;
   text-shadow: 0px 1px 1px #FFFFFF;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 table thead th.sorted {
